Update playercontroller to take in mouse input as rotation

--- a/Game/ProjectSeeds/Config/DefaultInput.ini
+++ b/Game/ProjectSeeds/Config/DefaultInput.ini
@@ -91,6 +91,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="FireRight",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="FireRight",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="FireRight",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="Fire",Scale=1.000000,Key=LeftMouseButton)
++AxisMappings=(AxisName="Fire",Scale=1.000000,Key=Enter)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
