add AI character

--- a/Game/ProjectSeeds/Config/DefaultEngine.ini
+++ b/Game/ProjectSeeds/Config/DefaultEngine.ini
@@ -32,3 +32,17 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_TwinStickPawn",NewClassName="ProjectSeedsPawn")
 +ActiveClassRedirects=(OldClassName="TP_TwinStickGameMode",NewClassName="ProjectSeedsGameMode")
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot0=Zero
+CategorySlot1=One
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot4=Four
+CategorySlot5=Five
+CategorySlot6=Six
+CategorySlot7=Seven
+CategorySlot8=Eight
+CategorySlot9=Nine
+CategoryRowPrevKey=Delete
+CategoryRowNextKey=Insert
+
