potential to set active ability

--- a/Game/ProjectSeeds/Config/DefaultEngine.ini
+++ b/Game/ProjectSeeds/Config/DefaultEngine.ini
@@ -67,3 +67,4 @@ DirtyAreasUpdateFreq=60.000000
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ProjectSeeds.BaseSeed.HealtPoints",NewName="/Script/ProjectSeeds.BaseSeed.HealthPoints")
++ClassRedirects=(OldName="/Script/ProjectSeeds.ABaseAbility",NewName="/Script/ProjectSeeds.BaseAbility")
