SpawnerComponent and more stuff

--- a/Game/ProjectSeeds/Config/DefaultEngine.ini
+++ b/Game/ProjectSeeds/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TwinStickCPP/Maps/TwinStickExampleMap
+EditorStartupMap=/Game/ALepage/ALexTestMap.ALexTestMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
@@ -68,3 +68,4 @@ DirtyAreasUpdateFreq=60.000000
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ProjectSeeds.BaseSeed.HealtPoints",NewName="/Script/ProjectSeeds.BaseSeed.HealthPoints")
 +ClassRedirects=(OldName="/Script/ProjectSeeds.ABaseAbility",NewName="/Script/ProjectSeeds.BaseAbility")
+
