--- a/Game/ProjectSeeds/Config/DefaultEngine.ini
+++ b/Game/ProjectSeeds/Config/DefaultEngine.ini
@@ -123,4 +123,7 @@ DirtyAreasUpdateFreq=60.000000
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/ProjectSeeds.BaseSeed.HealtPoints",NewName="/Script/ProjectSeeds.BaseSeed.HealthPoints")
 +ClassRedirects=(OldName="/Script/ProjectSeeds.ABaseAbility",NewName="/Script/ProjectSeeds.BaseAbility")
++FunctionRedirects=(OldName="/Script/ProjectSeeds.HealthPointHUD.OnHealthUpdate",NewName="/Script/ProjectSeeds.HealthWidget.UpdateHealthUI")
++ClassRedirects=(OldName="/Script/ProjectSeeds.HealthPointHUD",NewName="/Script/ProjectSeeds.HealthWidget")
++ClassRedirects=(OldName="/Script/ProjectSeeds.HealthBarWidget",NewName="/Script/ProjectSeeds.HealthBarComponent")
 
