SeedStationText, Stations Setup

--- a/Game/ProjectSeeds/Config/DefaultEngine.ini
+++ b/Game/ProjectSeeds/Config/DefaultEngine.ini
@@ -131,4 +131,5 @@ DirtyAreasUpdateFreq=60.000000
 +ClassRedirects=(OldName="/Script/ProjectSeeds.HealthPointHUD",NewName="/Script/ProjectSeeds.HealthWidget")
 +ClassRedirects=(OldName="/Script/ProjectSeeds.HealthBarWidget",NewName="/Script/ProjectSeeds.HealthBarComponent")
 +PropertyRedirects=(OldName="/Script/ProjectSeeds.WeaponUpgradeComponent.NumBullets",NewName="/Script/ProjectSeeds.WeaponUpgradeComponent.NumExtraBullets")
++ClassRedirects=(OldName="/Script/ProjectSeeds.SeedText",NewName="/Script/ProjectSeeds.SeedStationText")
 
