Fix Projectile friendly and navigation

--- a/Game/ProjectSeeds/Config/DefaultEngine.ini
+++ b/Game/ProjectSeeds/Config/DefaultEngine.ini
@@ -133,3 +133,6 @@ DirtyAreasUpdateFreq=60.000000
 +PropertyRedirects=(OldName="/Script/ProjectSeeds.WeaponUpgradeComponent.NumBullets",NewName="/Script/ProjectSeeds.WeaponUpgradeComponent.NumExtraBullets")
 +ClassRedirects=(OldName="/Script/ProjectSeeds.SeedText",NewName="/Script/ProjectSeeds.SeedStationText")
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
