Main Menu Pause Menu, project build setup

--- a/Game/ProjectSeeds/Config/DefaultEngine.ini
+++ b/Game/ProjectSeeds/Config/DefaultEngine.ini
@@ -70,7 +70,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TwinStickCPP/Maps/TwinStickExampleMap
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
