--- a/Game/ProjectSeeds/Config/DefaultGame.ini
+++ b/Game/ProjectSeeds/Config/DefaultGame.ini
@@ -1,6 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4A679AFC4531379AFD6AFF8A565F0007
-ProjectName=Twin Stick Game Template
+ProjectName=Tree VS Fungus
+Description=Arcade Fungus
+CopyrightNotice=Global Game Jam 2023
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "961DF3B74B234CB786659C98D2D5E8D0", "Tree VS Fungus")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "DF7C3FC4411E6C0E1C91E38FD01F543D", "Tree VS Fungus")
 
 [/Script/ProjectSeeds.ProjectSeedsCharacter]
 FixedCameraPitch=-45.0
@@ -9,3 +13,4 @@ FixedCameraDistance=1500.0
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
